Fix text overflow in Image Search Abstraction Layer

--- a/Back_End_Development_Certification/Image_Search_Abstraction_Layer/style.css
+++ b/Back_End_Development_Certification/Image_Search_Abstraction_Layer/style.css
@@ -20,6 +20,7 @@ p {
 }
 li {
   font-family: "Lucida Console", Monaco, monospace;
+  word-break: break-word;
 }
 input {
   border: none;
